--- a/frontend/store.html
+++ b/frontend/store.html
@@ -26,7 +26,7 @@
             return;
           }
         
-          fetch('https://yourDomainName2.wyz/api/definitions', {
+          fetch('https://lab4-comp4537-genf.vercel.app/api/definitions', {
             method: 'POST',
             headers: {
               'Content-Type': 'application/json',
